[Console Window]: Remove ‘Clear’ button

--- a/Revised JB version/src/javablock/gui/Interpreter.form
+++ b/Revised JB version/src/javablock/gui/Interpreter.form
@@ -314,7 +314,6 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="ClearButton" max="32767" attributes="0"/>
                                   <Component id="executionFeedBack" alignment="1" max="32767" attributes="0"/>
                                   <Component id="outScroll" alignment="1" pref="541" max="32767" attributes="0"/>
                                   <Group type="102" alignment="1" attributes="0">
@@ -335,15 +334,13 @@
                               <Component id="outScroll" min="-2" pref="150" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="executionFeedBack" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="ClearButton" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="command" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="commandLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="exeButton" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="27" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -364,16 +361,6 @@
                         </Component>
                       </SubComponents>
                     </Container>
-                    <Component class="javax.swing.JButton" name="ClearButton">
-                      <Properties>
-                        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-                          <ResourceString bundle="config/lang/lang.properties" key="scriptPanel.clear" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
-                        </Property>
-                      </Properties>
-                      <Events>
-                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ClearButtonActionPerformed"/>
-                      </Events>
-                    </Component>
                     <Component class="javax.swing.JTextField" name="command">
                     </Component>
                     <Component class="javax.swing.JLabel" name="commandLabel">
